--- a/NutriPlanner/frontend/src/styles/features.css
+++ b/NutriPlanner/frontend/src/styles/features.css
@@ -1,5 +1,6 @@
 .features_outer{
     background-color: #f1f1ea;
+    padding-bottom: 10vh;
 }
 .feature_Container{
     display: flex;
@@ -33,6 +34,7 @@
     color: #666;
 }
 
+
 .feature-container {
     display: flex;
     justify-content: space-evenly;
@@ -53,7 +55,7 @@
     gap:2vh;
     align-items: center;
     padding: 10px;
-    background-color: rgb(252, 237, 216);
+    background-color: #D2E3C8;
     border-radius: 8px;
 }
 
@@ -63,6 +65,12 @@
 
 .feature-clicked p {
     color: #666;
+    width: 35vw;
+}
+
+.feature-clicked img{
+    width: 25vw;
+    height: auto;
 }
 
 .feature-clicked a {
@@ -98,5 +106,11 @@
     .feature-clicked{
         max-width: none;
         width: 70vw;
+    }
+    .feature-clicked img{
+        width: 60vw;
+    }
+    .feature-clicked p{
+        width: 60vw;
     }
 }
